--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
     "ngx-toastr": "6.5.0",
-    "rxjs": "~6.5.5",
+    "rxjs": "^6.1.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
